--- a/src/backmatter/eidesstatt.tex
+++ b/src/backmatter/eidesstatt.tex
@@ -1,28 +1,70 @@
 % Robin Prillwitz 2022
+% this tries to implement
+% https://th-deg.de/Studierende/Antraege-und-Organisatorisches/AI/Abschlussarbeiten_final_IAS_AI_LSI.pdf
 
 \newpage
 \begin{samepage}
-\centersection{Eidesstattliche Versicherung}
-\addcontentsline{toc}{section}{Eidesstattliche Versicherung}
-\vspace{0.5cm}
-Ich, \underline{\textbf{\;\authorFirst,\;\authorLast,\;\matrnr\;}}\\
-\hspace*{0.8cm}\small(Vorname, Name, Matr.-Nr.)\normalsize\\[1em]
-versichere an Eides Statt durch meine Unterschrift, dass ich die vorstehende Arbeit selbständig und ohne fremde Hilfe angefertigt und alle Stellen, die ich wörtlich oder dem Sinne nach aus Veröffentlichungen entnommen habe, als solche kenntlich gemacht habe, mich auch keiner anderen als der angegebenen Literatur oder sonstiger Hilfsmittel bedient habe.
+\centersection{Erklärung}
+\addcontentsline{toc}{section}{Erklärung}
 
-Ich versichere an Eides Statt, dass ich die vorgenannten Angaben nach bestem Wissen und Gewissen gemacht habe und dass die Angaben der Wahrheit entsprechen und ich nichts verschwiegen habe.
+Ich, \underline{\textit{\textbf{\;\authorFirst,\;\authorLast,\;\matrnr\;}}}\\
+\hspace*{0.8cm}\small{\textit{Vorname, Name, Matr.-Nr.}}\\[1em]
+erkläre hiermit, dass ich die Abschlussarbeit gemäß \S~35 Abs. 7 \textit{RaPO} (Rahmenprüfungsordnung für die Fachhochschulen in Bayern, \textit{BayRS 2210-4-1-4-1-WFK}) selbständig verfasst, noch nicht anderweitig für Prüfungszwecke vorgelegt, keine anderen als die angegebenen Quellen oder Hilfsmittel benutzt sowie wörtliche und sinngemäße Zitate als solche gekennzeichnet habe.
 
-Die Strafbarkeit einer falschen eidesstattlichen Versicherung ist mir bekannt, namentlich die Strafandrohung gemä\ss~\S~156 StGB bis zu drei Jahren Freiheitsstrafe oder Geldstrafe bei vorsätzlicher Begehung der Tat bzw. gemä\ss~\S~163 Abs.1 StGB bis zu einem Jahr Freiheitsstrafe oder Geldstrafe bei fahrlässiger Begehung.
-
-% \vspace{-0.5cm}
+\vspace*{1em}
 \begin{table}[ht!]
     \centering
     \begin{tabular*}{\textwidth}{l @{\extracolsep{\fill}} l}
-        \underline{\textbf{\date\;}}&
-        \underline{
-            % \includegraphics[width=5cm, trim={0 2cm 0 0}]{\signature}
-            \hspace*{5cm}
-        }\\
-        Datum & Unterschrift
+        \underline{\textit{\textbf{\date\;}}}&
+        \underline{\hspace*{6cm}}\\
+        \small{\textit{Datum}} & \small{\textit{Unterschrift des/der Studenten/in}}\\
+        & \small{\textit{\textbf{\authorFirst\ \authorLast,\;\matrnr}}}
+    \end{tabular*}
+\end{table}
+
+\vspace*{0.5em}
+\rule{\textwidth}{1pt}
+\vspace*{0.5em}
+
+% uncomment one of the following:
+% Ich bin \textit{\textbf{nicht}} damit einverstanden, dass die von mir angefertigte Abschlussarbeit über die Bibliothek der Hochschule einer breiteren Öffentlichkeit zugänglich gemacht wird.
+
+% Ich \textit{\textbf{bin}} damit einverstanden, dass die von mir angefertigte Abschlussarbeit über die Bibliothek der Hochschule einer breiteren Öffentlichkeit zugänglich gemacht wird.
+
+Ich bin damit einverstanden, dass die von mir angefertigte Abschlussarbeit über die Bibliothek der Hochschule \textit{\textbf{nach Ablauf einer Sperrfrist von \underline{\hspace{3ex}} Jahren}} einer breiteren Öffentlichkeit zugänglich gemacht wird.
+
+Ich erkläre und stehe dafür ein, dass ich alleiniger Inhaber aller Rechte an der Abschlussarbeit einschließlich des Verfügungsrechts über Vorlagen an beigefügten Abbildungen, Plänen o.ä., bin und durch deren öffentliche Zugänglichmachung weder Rechte und Ansprüche Dritter noch gesetzliche Bestimmungen verletzt werden.
+
+\vspace*{1em}
+\begin{table}[ht!]
+    \centering
+    \begin{tabular*}{\textwidth}{l @{\extracolsep{\fill}} l}
+        \underline{\textit{\textbf{\date\;}}}&
+        \underline{\hspace*{6cm}}\\
+        \small{\textit{Datum}} & \small{\textit{Unterschrift des/der Studenten/in}}\\
+        & \small{\textit{\textbf{\authorFirst\ \authorLast,\;\matrnr}}}
+    \end{tabular*}
+\end{table}
+
+\vspace*{0.5em}
+\rule{\textwidth}{1pt}
+\vspace*{0.5em}
+
+Eine Aufnahme eines Exemplars der Abschlussarbeit in den Bestand der Bibliothek und die Ausleihe des Exemplars wird
+\textit{\textbf{
+% choose one:
+befürwortet
+% nicht befürwortet
+}}.
+
+\vspace*{1em}
+\begin{table}[ht!]
+    \centering
+    \begin{tabular*}{\textwidth}{l @{\extracolsep{\fill}} l}
+        \underline{\textit{\textbf{\date\;}}}&
+        \underline{\hspace*{6cm}}\\
+        \small{\textit{Datum}} & \small{\textit{Unterschrift des/der Betreuers/in}}\\
+        & \small{\textit{\textbf{\auditor}}}
     \end{tabular*}
 \end{table}
 \end{samepage}
