--- a/src/preamble/meta.tex
+++ b/src/preamble/meta.tex
@@ -7,7 +7,7 @@
 \def \titleGer      {Titel der Arbeit}
 \def \titleEng      {Title of the Work}
 
-\def \auditor       {Professor Bösnecker}
+\def \auditor       {Prof. Dr. Bösnecker}
 
 \def \authorFirst   {Robin}
 \def \authorLast    {Prillwitz}
