major layout changes

--- a/document.tex
+++ b/document.tex
@@ -1,15 +1,13 @@
 % Robin Prillwitz 2022
 
-\documentclass{scrartcl}
+\documentclass{scrbook}
 
 \input{./src/preamble/preamble.tex}
 
 \begin{document}
     \input{./src/frontmatter/frontmatter.tex}
 
-    \clearpage
     \input{./src/mainmatter/mainmatter.tex}
 
-    \clearpage
     \input{./src/backmatter/backmatter.tex}
 \end{document}
