--- a/src/backmatter/appendix/appendix.tex
+++ b/src/backmatter/appendix/appendix.tex
@@ -1,8 +1,10 @@
 {
 \onehalfspacing
-\begin{appendices}
+\appendix
+\chapter{Anhang}
+\label{apx:first}
 
 \input{./src/backmatter/appendix/appendixA.tex}
 
-\end{appendices}
+
 }
