--- a/src/frontmatter/abstract.tex
+++ b/src/frontmatter/abstract.tex
@@ -3,7 +3,11 @@
 \centersection{Abstrakt}
 \addcontentsline{toc}{section}{Abstrakt}
 
-\begin{abstract}
-    \lipsum[1]% Blind text
-\end{abstract}
+\begingroup
+\leftskip4em
+\rightskip\leftskip
+
+\blindtext
+
+\endgroup
 }
