--- a/src/frontmatter/preface.tex
+++ b/src/frontmatter/preface.tex
@@ -3,15 +3,20 @@
 \centersection{Vorwort}
 \addcontentsline{toc}{section}{Vorwort}
 
-\begin{abstract}% We're abusing the abstract environment for the preface due to the margins
+
+\begingroup
+\leftskip4em
+\rightskip\leftskip
+
 Das ist das Vorwort der Arbeit.
 Hierbei möchte ich Danksagung an verschiedene Personen und Institutionen geben, welche mir bei diser Arbeit geholfen haben.
 Außerdem werde ich auch meine Gründe der Themenwahl ansprechen.
 Diese Sektion ist optional.
 
-\vspace*{1.2em}
+\vspace*{1cm}
 \noindent
 \hfill\hspace*{-2em}\textsc{\authorFirst\ \authorLast}\\
 \date.
-\end{abstract}
+
+\endgroup
 }
