--- a/src/backmatter/backmatter.tex
+++ b/src/backmatter/backmatter.tex
@@ -1,12 +1,13 @@
 % Robin Prillwitz 2022
 
 % BIBLIOGRAPHY
-\backmatter
+\cleartoleftpage
+
 \singlespacing
 \setstretch{1}
 \nocite{*}
-\chapter{\bibname}
-% \addcontentsline{toc}{chapter}{\bibname}
+\chapter*{\bibname}
+\addcontentsline{toc}{chapter}{\bibname}
 \printbibliography[heading=none]
 
 \newpage
