--- a/src/frontmatter/frontmatter.tex
+++ b/src/frontmatter/frontmatter.tex
@@ -29,6 +29,8 @@
 \phantomsection
 \tableofcontents
 
+\newpage
+
 % Table of Tables
 \phantomsection
 \addcontentsline{toc}{section}{Tabellenverzeichnis}
