--- a/src/frontmatter/titlepage.tex
+++ b/src/frontmatter/titlepage.tex
@@ -22,7 +22,8 @@
     % write text
     \begin{center}
     {
-        \Verdana
+        % \Verdana
+        \Helvetica
         \fontsize{14}{28}\selectfont
         \vspace{1cm}
         Technische Hochschule Deggendorf\\
