--- a/src/preamble/bibliography.tex
+++ b/src/preamble/bibliography.tex
@@ -8,7 +8,7 @@
 	natbib=true,
 	sorting=nyt,
 	style=ieee-alphabetic,
-	firstinits=true,
+	giveninits=true,
 	sortlocale=de_DE,
 	backref=true,
 	style=numeric,
