--- a/src/backmatter/eidesstatt.tex
+++ b/src/backmatter/eidesstatt.tex
@@ -5,7 +5,7 @@
 \newpage
 \begin{samepage}
 \centersection{Erklärung}
-\addcontentsline{toc}{section}{Erklärung}
+\addcontentsline{toc}{chapter}{Erklärung}
 
 Ich, \underline{\textit{\textbf{\;\authorFirst,\;\authorLast,\;\matrnr\;}}}\\
 \hspace*{0.8cm}\small{\textit{Vorname, Name, Matr.-Nr.}}\\[1em]
