--- a/src/backmatter/colophon.tex
+++ b/src/backmatter/colophon.tex
@@ -1,5 +1,8 @@
 % Robin Prillwitz 2022
 
+% this section gives a brief look into the typsetting of this document and is optional
+% you can make the design and layout your own
+
 {
 \vspace*{\fill} % Position at the bottom
 \centersection{Kolophon}
@@ -8,8 +11,8 @@
 \singlespacing
 \parskip=0pt
 \setstretch{1}\noindent
-\makebox[\linewidth][s]{Dieses Dokument ist ein \hologo{LaTeX2e} Dokument der \hologo{KOMAScript} Klasse und wurde mit}\par\noindent
+\makebox[\linewidth][s]{Dieses Dokument ist ein \hologo{LaTeX3} Dokument der \hologo{KOMAScript} Klasse und wurde mit}\par\noindent
 \makebox[\linewidth][s]{\textit{Minion Pro} gesetzt. Alle eigenen Zeichnungen sind mit Ti\textit{k}Z und \textsc{pgfplots} erstellt.}\par\noindent
-\makebox[\linewidth][s]{Kompiliert wurde es mit \hologo{XeLaTeX} und \hologo{biber} auf \platformname\ am \today.}\par\noindent
+\makebox[\linewidth][s]{Kompiliert wurde es mit \hologo{LuaLaTeX} und \hologo{biber} auf \platformname\ am \today.}\par\noindent
 \HighlightColor{\threeast}
 }
