--- a/src/preamble/glossary.tex
+++ b/src/preamble/glossary.tex
@@ -1,6 +1,8 @@
 % Robin Prillwitz 2022
 
-\usepackage[acronym, toc]{glossaries}
+\usepackage[
+  acronym, toc
+]{glossaries}
 \usepackage[automake, nonumberlist, nogroupskip]{glossaries-extra}
 
 \renewcommand*{\glsclearpage}{} % remove gloassary pagebreak
@@ -8,16 +10,6 @@
 \setabbreviationstyle[acronym]{long-short}
 \renewcommand*{\glstextformat}[1]{\textit{#1}} % cursive acronyms
 \renewcommand\glstreepredesc{\tabto{4cm}} % glossary spacing
-
-% dirty hack to get acr and glossary titles to behave like toc and friends
-\makeatletter
-\renewcommand*{\glossarysection}[2][\@gls@title]{%
-  \def\@gls@title{#2}%
-    \section*{\huge #1}
-    \addcontentsline{toc}{section}{#1}
-  \glsglossarymark{\glossarytoctitle}%
-}
-\makeatother
 
 % --------------------------------- Acronyms -------------------------------- %
 \newacronym{acr}{ACR}{Acronym}
