removed superflous font imports

--- a/src/frontmatter/titlepage.tex
+++ b/src/frontmatter/titlepage.tex
@@ -23,7 +23,7 @@
     \begin{center}
     {
         % \Verdana
-        \Helvetica
+        \sffamily
         \fontsize{14}{28}\selectfont
         \vspace{1cm}
         Technische Hochschule Deggendorf\\
