reduced addcontentsline usage

--- a/src/backmatter/backmatter.tex
+++ b/src/backmatter/backmatter.tex
@@ -6,8 +6,7 @@
 \singlespacing
 
 % BIBLIOGRAPHY
-\chapter*{\bibname}
-\addcontentsline{toc}{chapter}{\bibname}
+\addchap{\bibname}
 \nocite{*}
 \printbibliography[heading=none]
 
