--- a/src/backmatter/eidesstatt.tex
+++ b/src/backmatter/eidesstatt.tex
@@ -4,8 +4,7 @@
 
 \newpage
 \begin{samepage}
-\centersection{Erklärung}
-\addcontentsline{toc}{chapter}{Erklärung}
+\addsec*{Erklärung}
 
 Ich, \underline{\textit{\textbf{\;\authorFirst,\;\authorLast,\;\matrnr\;}}}\\
 \hspace*{0.8cm}\small{\textit{Vorname, Name, Matr.-Nr.}}\\[1em]
