minor package changes

--- a/src/preamble/imports/colors.tex
+++ b/src/preamble/imports/colors.tex
@@ -1,5 +1,5 @@
 % COLOR
-\usepackage[usenames,dvipsnames,svgnames,table]{xcolor}
+\usepackage[luatex,dvipsnames,svgnames,table]{xcolor}
 
 % Colors of THD faculties
 \definecolor{THDGreen}      {HTML}{13a538}% BIW
