--- a/src/preamble/imports/setup.tex
+++ b/src/preamble/imports/setup.tex
@@ -11,7 +11,7 @@
 \usepackage[iso,german]{isodate}
 \usepackage{hyphenat}
 \hyphenation{Mathe-matik wieder-gewinnen}
-\usepackage[babel=true]{csquotes}
+\usepackage[autostyle]{csquotes}
 
 % APPENDIX
 \usepackage[toc,page]{appendix}
