--- a/src/preamble/preamble.tex
+++ b/src/preamble/preamble.tex
@@ -11,6 +11,7 @@
   listof        = leveldown,
   usegeometry   = true,
 }
+\usepackage{scrhack}
 
 \input{./src/preamble/imports/colors.tex}
 \input{./src/preamble/imports/setup.tex}
