--- a/references/references.bib
+++ b/references/references.bib
@@ -1,7 +1,7 @@
 @online{latex-template,
   title     = {thd-template},
   author    = {Robin Prillwitz},
-  year      = {2022-07-16},
+  date      = {2022-07-16},
   url       = {https://github.com/playduck/thd-template},
   urldate   = {2022-07-16},
   note      = {Inoffizielle \LaTeX\ Bachelor-Vorlage für die \textit{THD}}
@@ -10,7 +10,7 @@
 @online{exampleImage,
   title     = {Green Grass on Forest},
   author    = {Rudolf Jakkel},
-  year      = {2017-03-20},
+  date      = {2017-03-20},
   url       = {https://www.pexels.com/photo/green-grass-on-forest-418831/},
   urldate   = {2022-07-01}
 }
