minor content changes

--- a/src/backmatter/backmatter.tex
+++ b/src/backmatter/backmatter.tex
@@ -12,7 +12,7 @@
 
 \newpage
 
-% Glossary
+% GLOSSARY
 \setglossarysection{chapter}
 \printglossary[]
 
@@ -23,11 +23,11 @@
 \cleartoleftpage
 \pagestyle{plain}%remove headings
 
-% EIDENSTAT
+% EIDENSSTAT
 \input{./src/backmatter/eidesstatt.tex}
 
 \newpage
 \clearpage
 
-% KOLOPHON
+% COLOPHON
 \input{./src/backmatter/colophon.tex}
