--- a/src/frontmatter/preface.tex
+++ b/src/frontmatter/preface.tex
@@ -7,7 +7,7 @@
 \rightskip\leftskip
 
 Das ist das Vorwort der Arbeit.
-Hierbei möchte ich Danksagung an verschiedene Personen und Institutionen geben, welche mir bei diser Arbeit geholfen haben.
+Hierbei möchte ich Danksagung an verschiedene Personen und Institutionen geben, welche mir bei dieser Arbeit geholfen haben.
 Außerdem werde ich auch meine Gründe der Themenwahl ansprechen.
 Diese Sektion ist optional.
 
