--- a/src/frontmatter/titlepage.tex
+++ b/src/frontmatter/titlepage.tex
@@ -22,19 +22,19 @@
     % write text
     \begin{center}
     {
-        % \Verdana
-        \sffamily
+        \Verdana
+        % \sffamily
         \fontsize{14}{28}\selectfont
         \vspace{1cm}
         Technische Hochschule Deggendorf\\
         \vspace{2cm}
-        Fakultät \faculty\\
+        \textbf{Fakultät \faculty}\\
         (\degreeType -Studiengang \degreeCourse)\\
         \vspace{3cm}
         \textbf{\titleGer}\\
         \textbf{\titleEng}\\
         \vspace{3cm}
-        \degreeType arbeit zur Erlangung des akademischen Grades:\\
+        \textbf{\degreeType arbeit zur Erlangung des akademischen Grades:}\\
         \degreeType\ of \degreeDisc\\
         an der Technischen Hochschule Deggendorf\\
         \vspace{3cm}
