Added List of Code and List of Equatons

--- a/src/frontmatter/frontmatter.tex
+++ b/src/frontmatter/frontmatter.tex
@@ -33,13 +33,25 @@
 % Table of Tables
 \listoftables
 
+\newpage
+
 % Table of Figures
 \listoffigures
+
+\newpage
 
 % Acronyms
 \setglossarystyle{listdotted}
 \setglossarystyle{tree}
 \setglossarysection{section}
 \printacronyms
+
+\newpage
+% Equations list
+\listofequations
+
+\newpage
+% Sourcecode list
+\lstlistoflistings
 
 \cleartoleftpage
