--- a/src/preamble/imports/code.tex
+++ b/src/preamble/imports/code.tex
@@ -2,7 +2,8 @@
 
 \usepackage{accsupp}% accessibility, required for lstlistings
 \usepackage{listings}
-\renewcommand\lstlistingname{Sourcecode} % Change language of section name
+\renewcommand{\lstlistlistingname}{Quellcodeverzeichniss}
+\renewcommand\lstlistingname{Quellcode} % Change language of section name
 \lstset{ % General setup for the package
     language=C++,
     rangeprefix=//\ ---\ ,rangesuffix=\ ---,
