--- a/src/preamble/imports/code.tex
+++ b/src/preamble/imports/code.tex
@@ -2,7 +2,7 @@
 
 \usepackage{accsupp}% accessibility, required for lstlistings
 \usepackage{listings}
-\renewcommand{\lstlistlistingname}{Quellcodeverzeichniss}
+\renewcommand{\lstlistlistingname}{Quellcodeverzeichnis}
 \renewcommand\lstlistingname{Quellcode} % Change language of section name
 \lstset{ % General setup for the package
     language=C++,
