--- a/src/preamble/imports/setup.tex
+++ b/src/preamble/imports/setup.tex
@@ -59,16 +59,18 @@
 \setcounter{secnumdepth}{4}
 \setcounter{tocdepth}{4}
 
-% List of Equations
 \DeclareNewTOC[listname={Gleichungsverzeichnis},type=equation]{loe}
-% And a command to add entries to the file:
-\newcommand*{\setequationentry}[2][0]{%
+\makeatletter% because of the `@' in `\@currenvir` and `\@ne`
+\newcommand{\setequationentry}[1]{%
   \begingroup
-    \advance \value{equation} by #1\relax
-    \addxcontentsline{loe}{equation}[\theequation]{#2}%
+    \Ifstr{\@currenvir}{equation}{}{%
+      \advance \value{equation} by \@ne\relax%
+    }%
+    \addxcontentsline{loe}{equation}[\theequation]{#1}%
   \endgroup
   \ignorespaces
 }
+\makeatother% because of the `\makeatletter' above
 
 % HEADER & FOOTER
 \usepackage{scrlayer}
