--- a/src/preamble/preamble.tex
+++ b/src/preamble/preamble.tex
@@ -9,6 +9,7 @@
   chapterprefix = false,
   listof        = totoc,
   listof        = leveldown,
+  % both listof's are required
   usegeometry   = true,
 }
 \usepackage{scrhack}
