fixed appendix numbering

--- a/src/backmatter/appendix/appendixA.tex
+++ b/src/backmatter/appendix/appendixA.tex
@@ -2,3 +2,13 @@
 \label{apx:sec:exampleAppendix}
 
 \lipsum[1-5]
+
+\begin{table}
+    \begin{tabular}{|c|c|}
+        \hline
+        AAA & 1
+        BBB & 2
+        \hline
+    \end{tabular}
+\caption[Testtabelle]{Testtabelle um zu sehen, dass \texttt{float} Umgebungen auch im Anhang korrekt nummeriert werden.}
+\end{table}
