fixed appendix table

--- a/src/backmatter/appendix/appendixA.tex
+++ b/src/backmatter/appendix/appendixA.tex
@@ -4,10 +4,11 @@
 \lipsum[1-5]
 
 \begin{table}
+    \centering
     \begin{tabular}{|c|c|}
         \hline
-        AAA & 1
-        BBB & 2
+        AAA & 1 \\
+        BBB & 2 \\
         \hline
     \end{tabular}
 \caption[Testtabelle]{Testtabelle um zu sehen, dass \texttt{float} Umgebungen auch im Anhang korrekt nummeriert werden.}
