--- a/src/preamble/preamble.tex
+++ b/src/preamble/preamble.tex
@@ -23,6 +23,9 @@
 \input{./src/preamble/imports/bibliography.tex}
 \input{./src/preamble/imports/glossary.tex}
 
+% enter your own packages in here
+\input{./src/preamble/imports/user.tex}
+
 \input{./src/preamble/meta.tex}
 
 % LINKS
