--- a/src/backmatter/backmatter.tex
+++ b/src/backmatter/backmatter.tex
@@ -7,7 +7,9 @@
 
 % BIBLIOGRAPHY
 \addchap{\bibname}
-\nocite{*}
+% default: print only bibliography items which are cited in the text
+% uncomment the following to cite everything (even if it's never cited directly):
+% \nocite{*}
 \printbibliography[heading=none]
 
 \newpage
