--- a/src/backmatter/colophon.tex
+++ b/src/backmatter/colophon.tex
@@ -1,7 +1,8 @@
 % Robin Prillwitz 2022
 
 % this section gives a brief look into the typsetting of this document and is optional
-% you can make the design and layout your own
+% you can make the design and layout your own.
+% there is no strict guideline for this. be creative - go wild :)
 
 {
 \vspace*{\fill} % Position at the bottom
