--- a/src/preamble/imports/bibliography.tex
+++ b/src/preamble/imports/bibliography.tex
@@ -18,6 +18,9 @@
 \patchcmd{\bibsetup}{\interlinepenalty=5000}{\interlinepenalty=10000}{}{}
 
 % ------------------------------- bib resouces ------------------------------- %
+% you can add multiple files for different resources here
+% these will all be consolidated into one bibliography as if they're from one file
+% this can be used to structure your sources for individual chapters
 \addbibresource{./references/references.bib}
 
 % ------------------------------- localization ------------------------------- %
