--- a/src/preamble/imports/glossary.tex
+++ b/src/preamble/imports/glossary.tex
@@ -11,6 +11,9 @@
 \renewcommand*{\glstextformat}[1]{\textit{#1}} % cursive acronyms
 \renewcommand\glstreepredesc{\tabto{4cm}} % glossary spacing
 
+% enter your own acronyms and glossary entries here
+% use in the text using the \gls{} and \acrshort{} or \acr... family of commands
+
 % --------------------------------- Acronyms -------------------------------- %
 \newacronym{acr}{ACR}{Acronym}
 
